--- a/package.json
+++ b/package.json
@@ -37,15 +37,16 @@
     "sass-loader": "^12.6.0",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1",
+    "webpack-dev-server": "^4.7.4",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "^7.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-loader": "^4.0.2"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "normalize.css": "^8.0.1"
   }
 }
