--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,12 @@
         "comma-dangle": "off",
         "require-jsdoc": "off",
         "linebreak-style": "off",
-        "indent": "off"
+        "indent": "off",
+        "object-curly-spacing": "off",
+        "quotes": "off",
+        "space-before-blocks": "off",
+        "no-trailing-spaces": "off",
+        "max-len": "off"
     },
     "extends": ["eslint:recommended", "google"]
 }
